[package]
name = "w90"
version = "0.1.0"
authors = ["Tim Lovorn <tflovorn@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
qe = { path = "../qe-rs" }
failure = "*"
serde = "*"
serde_derive = "*"

[dev-dependencies]
pre-commit = "*"

[package.metadata.precommit]
fmt = "cargo +nightly fmt -- --write-mode=diff 2>&1"
test = "cargo test 2>&1"
